# deepiri-boardman

./: .dockerignore  .env.acceptance.example  .env.example  .env.production.example  .gitignore  AGENTS.md  DIRECTION.md  Dockerfile  LICENSE  README.md  SETUP.md  alembic.ini  alembic.py  boardman.db-shm  boardman.db-wal  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  repo_signals.json  repos.acceptance.yml  repos.yml  requirements.txt  team_assignments.acceptance.yml  team_assignments.yml  team_assignments.yml.example  team_plaky_boards.example.json  team_repos.example.json  watcher.py  worker_team.json
.cursor/rules/: agents-md-maintenance.mdc
.github/: pull_request_template.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_agent_scan_tables.py  003_pr_task_links.py  004_github_webhook_deliveries.py
boardman/: conversations_for_testing.py  logging_config.py  main.py  readiness.py  repos_config.py  settings.py  sqlite_worker.py  worker.py
boardman-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
boardman-ui/src/: App.css  App.tsx  main.tsx
boardman/agent/: __init__.py  guardrails.py  memory_store.py  ollama_text_tool_coercion.py  plaky_prompt_extra.py  prompts.py  runner.py  service.py  task_draft.py  tool_context.py
boardman/assignment/: __init__.py  config.py  identity_common.py  identity_match.py  llm_identity_match.py  qa_picker.py  repo_rules.py  team_checker.py  tier_classifier.py
boardman/broker/: __init__.py  arq_pool.py  job_queue.py
boardman/cache/: __init__.py  agent_redis.py
boardman/cli/: commands.py  plan_commands.py
boardman/database/: models.py  session.py
boardman/github/: org_repos.py  pr_actions.py  pr_signals.py  qa_activity_inference.py  qa_contribution_profile.py  qa_tier_teams.py  repo_fetch.py  repo_metadata.py  support_qa.py  team_roster.py  webhooks.py
boardman/jobs/: __init__.py  handlers.py
boardman/llm/: __init__.py  completion.py  factory.py  ollama_autodetect.py
boardman/plaky/: board_aware.py  board_schema.py  client.py  dynamic_qa_status.py  hierarchy.py  inventory.py  name_match.py  placement.py  placement_discovery.py  placement_resolve.py  plaky_catalog.py  repo_category.py  task_payload_ids.py  task_tag_vocab.py
boardman/planning/: __init__.py  context_aggregator.py  context_direction.py  context_github.py  context_plaky.py  context_sync.py  datetime_utils.py  llm_adapter.py  plan_output.py  planner.py  schedule.py  service.py  team_config.py  team_models.py  team_plaky_boards.py  team_repos.py
boardman/ratelimit/: __init__.py  dependencies.py  leaky_bucket.py
boardman/routes/: agent.py  assignment.py  github_events.py  github_team.py  health.py  (+4 more)
docs/: ADDITIONAL_FEATURES.md  AGENTS_MAINTENANCE.md  AGENT_PLAN.md  BOARDMAN_OVERVIEW.md  BOARDMAN_READINESS.md  BOARDMAN_STATUS_REPORT.md  BOARDMAN_SUPPORT_SESSION.md  BOARDMAN_TEAM_GUIDE.md  DEPLOYMENT.md  DEPLOY_AND_TEST.md  DIRECTION_TEMPLATE.md  GO_LIVE_CHECKLIST.md  HOSTING_REQUIREMENTS.md  MEETING_PLANS_PLAN.md  MEETING_PLANS_PR.md  NEW_FEATURES_PLAN.md  PILOT_TESTING.md  PLAN.md  STATUS_2026-05-08.md  TAKEHOME_STATUS.md
scripts/: acceptance_offline.sh  acceptance_plan.sh  acceptance_prepare.sh  benchmark_pr_linking.py  benchmark_stack.py  check-ollama-models.sh  deploy_preflight.sh  deploy_smoke.sh  e2e_test.py  sync_qa_capabilities.py  test_plaky_agent_http.py  verify_agents_md.py
tests/: conftest.py  plaky_test_board.py  test_agent_conversation_suite.py  test_agent_guardrails.py  test_agent_llm.py  test_agent_tool_streaming.py  test_agent_tool_traces.py  test_assignment.py  test_assignment_github_roster.py  test_board_aware.py  test_board_schema.py  test_direction_init.py  test_dynamic_qa_status.py  test_employer_review_flow.py  test_engineer_fill_in.py  test_github_api_key.py  test_github_org_repos.py  test_github_poller.py  test_github_webhook_dedupe.py  test_identity_match.py  test_langchain_ollama_integration.py  test_leaky_bucket.py  test_lifecycle_gap_handlers.py  test_llm.py  test_llm_factory.py  test_local_scan.py  test_ollama_benchmark.py  test_ollama_performance.py  test_ollama_text_tool_coercion.py  test_placement_discovery.py  test_placement_resolve.py  test_plaky_inventory.py  test_plaky_live.py  test_plaky_name_match.py  test_plaky_patch_value_candidates.py  test_plaky_patch_value_shapes.py  test_plaky_pr_workflow_live.py  test_plaky_retry.py  test_planning_agent_tool.py  test_planning_aggregator.py  (+34 more)
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+52 files in other folders)
