[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deepiri-boardman"
version = "0.1.0"
description = "GitHub ↔ Plaky sync automation service"
authors = ["Deepiri Team <team@deepiri.ai>"]
readme = "README.md"
packages = [{ include = "boardman" }]
keywords = ["github", "plaky", "automation", "webhook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109.0"
uvicorn = { extras = ["standard"], version = ">=0.27.0" }
pydantic = ">=2.6.0"
pydantic-settings = ">=2.1.0"
httpx = ">=0.26.0"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.0" }
aiosqlite = ">=0.19.0"
alembic = ">=1.13.0"
typer = ">=0.9.0"
rich = ">=13.7.0"
PyYAML = ">=6.0"
langchain = ">=0.3.0"
langchain-core = ">=0.3.0"
langchain-ollama = ">=0.2.0"
langchain-anthropic = ">=0.2.0"
langchain-openai = ">=0.2.0"
langchain-google-genai = ">=2.0.0"
redis = "^5.0"
arq = "^0.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
boardman = "boardman.cli.commands:app"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "C", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: real Ollama/network; run with BOARDMAN_AI_LIVE=1",
    "live_ollama: requires Ollama at OLLAMA_BASE_URL with LLM_MODEL available",
    "plaky_live: calls real Plaky API; requires PLAKY_API_KEY in .env or environment",
    "agent_e2e_live: multi-turn agent + real Ollama (optional Plaky); skipped when Ollama down",
]